# ukaelAudio

./: .gitignore  CMakeBuild.sh  CMakeLists.txt  LICENSE  benchmark  benchmark.c  doxygen.conf  printWave  printWave.c  readme.md  style.md  ukaelAudio  ukaelAudio.c  ukaelAudioTesting.c
assets/: .krlePalettized.tga-autosave.kra  krlePalettized.tga  unit_KRLEToTGA.tga  unit_TGAtoKrle.tga
assets/krle/: kaelTui.krle  noise.krle  orchisPalette.krle  worst.krle
assets/krleUnitTest/: convertPNGToTGA.sh
assets/krleUnitTest/firstPass/: noise.tga  orchisPalette.tga
assets/krleUnitTest/krle/: kaelTui.krle  orchisPalette.krle  tienaNMS.krle
assets/krleUnitTest/secondPass/: worst.tga
assets/krleUnitTest/tga/: worst.tga
assets/tga/: KaelTUIFont.tga  KaelTUIKaelygon.tga  KaelTUIMerged.tga  kaelTui.tga  noise.tga  test.tga  test2.tga  tienaNMS.tga  worst.tga~
include/kaelygon/: kaelMacros.c  kaelMacros.h  kaelMem.c
include/kaelygon/audio/: audio.h  audioTypes.h  tables.h  tone.h  waveform.h
include/kaelygon/book/: book.c  book.h  bookDraw.c  bookDraw.h  page.h  tui.c  tui.h
include/kaelygon/clock/: clock.c  clock.h  clockShared.h
include/kaelygon/clock/variant/: rdtscClock.c  rdtscClock.h
include/kaelygon/global/: anyTarget.h  debugTarget.h  kaelDebug.h  kaelMacros.c  kaelMacros.h  kaelMacrosShared.h  kaelRelease.h  releaseTarget.h
include/kaelygon/math/: k32.c  k32.h  k32u8.c  k32u8.h  math.c  math.h  rand.c  rand.h
include/kaelygon/string/: string.c  string.h
include/kaelygon/terminal/: keyID.h  keyMap.h  terminal.c  terminal.h
include/kaelygon/treeMem/: tree.c  tree.h  treeMem.c  treeMem.h
include/krle/: krle.c  krle.h  krleBase.c  krleBase.h  krleColor.c  krleColor.h  krleTGA.c  krleTGA.h  krleText.c  krleText.h
src/: generateAlphabet.c  kaelAudioPipewire.c  krleConvert.c  scratchpad.c  scratchpad2.c
tools/: benchmark  benchmark.c  bookTesting.c  bookUnit.c  dieRand  dieRand.c  dieRand.sh  dieharderResults.txt  krleCoding.c  mathTesting.c  pageTesting.c  printWave  printWave.c  rtc.c  shapePrint.c  sysMem.c  tableTest.c  testing.c  ukaelAudioTesting  ukaelAudioTesting.c  ukaelRandTest  ukaelRandTest.c
tools/audioTesting/: kaelAudioAlsa.c  kaelAudioPipewire.c
tools/kaelRandTesting/: kael32Unit.c  kaelRandPrint.c  kaelRandSearch.c  kaelRandVerifySingle.c
tools/kaelRandTesting/include/: kaelRandTesting.h  kaelRandTrials.h
tools/kaelRandTesting/include/k32/: k32.c  k32.h  k32u8.c  k32u8.h
tools/scrap/: bookTesting.c  measureRdtsc.c  memory.c  rtc.c  typeConst.c  u16emulate.c
tools/unitTest/: kael32Unit.c  mathTesting.c  runUnitTests.c  test.c  timerTest.c
tools/unitTest/include/: kaelRandUnit.h  kaelStringUnit.h  kaelTerminalUnit.h  kaelTreeMemUnit.h  krleConvert.h  unitTest.h
tools/unitTesting/: testUnits.c
tools/unitTesting/include/: kaelMemUnit.h  kaelRandUnit.h  kaelTerminalUnit.h
ukaelH/: kmath.h  ukaelToneC.h  ukaelTypedefC.h  ukaelWaveC.h
